--- a/carpentier/carpentier_constelacion.html
+++ b/carpentier/carpentier_constelacion.html
@@ -28,6 +28,15 @@
     <h2>Selecciona un nodo</h2>
     <div class="meta">Haz clic en una <strong>referencia</strong> para ver el contexto breve.</div>
     <div id="content" class="ctx">—</div>
+    <div id="video-container" style="margin-top:16px;">
+    <iframe width="100%" height="200"
+      src="https://www.youtube.com/embed/inF8qRk4RDU?si=F0sJVRCcnjj_KqKr"
+      title="Entrevista completa"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen>
+    </iframe>
+  </div>
   </aside>
 
   <div class="legend">
