--- a/carpentier/carpentier_constelacion.html
+++ b/carpentier/carpentier_constelacion.html
@@ -28,15 +28,16 @@
     <h2>Selecciona un nodo</h2>
     <div class="meta">Haz clic en una <strong>referencia</strong> para ver el contexto breve.</div>
     <div id="content" class="ctx">—</div>
-    <div id="video-container" style="margin-top:16px;">
-    <iframe width="100%" height="200"
-      src="https://www.youtube.com/embed/inF8qRk4RDU?si=F0sJVRCcnjj_KqKr"
-      title="Entrevista completa"
-      frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-      allowfullscreen>
-    </iframe>
-  </div>
+    <a id="yt-link" href="https://www.youtube.com/watch?v=inF8qRk4RDU"
+     target="_blank" rel="noopener noreferrer"
+     class="yt-btn" title="Ver entrevista en YouTube">
+    <!-- Logo YouTube (SVG inline) -->
+    <svg viewBox="0 0 90 64" aria-hidden="true">
+      <path fill="#FF0000" d="M87.5 10.1c-1-3.9-4-7-7.8-8C73.1 0.6 45 0.6 45 0.6s-28.1 0-34.7 1.5c-3.8 1-6.8 4.1-7.8 8C1 16.7 1 32 1 32s0 15.3 1.5 21.9c1 3.9 4 7 7.8 8C17 63.4 45 63.4 45 63.4s28.1 0 34.7-1.5c3.8-1 6.8-4.1 7.8-8C89 47.3 89 32 89 32s0-15.3-1.5-21.9z"/>
+      <polygon fill="#fff" points="36,45 57,32 36,19"/>
+    </svg>
+    <span>Ver entrevista en YouTube</span>
+  </a>
   </aside>
 
   <div class="legend">
