--- a/carpentier/carpentier_constelacion.html
+++ b/carpentier/carpentier_constelacion.html
@@ -28,9 +28,10 @@
     <h2>Selecciona un nodo</h2>
     <div class="meta">Haz clic en una <strong>referencia</strong> para ver el contexto breve.</div>
     <div id="content" class="ctx">—</div>
-    <a id="yt-link" href="https://www.youtube.com/watch?v=inF8qRk4RDU"
+    <a href="https://www.youtube.com/watch?v=inF8qRk4RDU"
      target="_blank" rel="noopener noreferrer"
-     class="yt-btn" title="Ver entrevista en YouTube">
+     title="Ver entrevista en YouTube"
+     style="position:absolute; bottom:12px; left:16px; right:16px; display:flex; align-items:center; gap:6px; padding:6px 8px; border:1px solid #ddd; border-radius:6px; text-decoration:none; color:#111; background:#fff; font-size:13px;">
     <!-- Logo YouTube (SVG inline) -->
     <svg viewBox="0 0 90 64" width="18" height="12" aria-hidden="true">
       <path fill="#FF0000" d="M87.5 10.1c-1-3.9-4-7-7.8-8C73.1 0.6 45 0.6 45 0.6s-28.1 0-34.7 1.5c-3.8 1-6.8 4.1-7.8 8C1 16.7 1 32 1 32s0 15.3 1.5 21.9c1 3.9 4 7 7.8 8C17 63.4 45 63.4 45 63.4s28.1 0 34.7-1.5c3.8-1 6.8-4.1 7.8-8C89 47.3 89 32 89 32s0-15.3-1.5-21.9z"/>
