--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Constelaciones — Galería de entrevistas</title>
+  <title>Constelaciones — Galería de entrevistas "A fondo"</title>
   <meta name="description" content="Galería de rostros; cada imagen abre la constelación correspondiente.">
   <style>
     :root{--bg:#fff;--fg:#111827;--muted:#6b7280;--border:#e5e7eb;--accent:#2563eb}
@@ -30,7 +30,7 @@
   <header>
     <div class="wrap">
       <h1>Galería de entrevistas</h1>
-      <p>Pulsa en el rostro para abrir la constelación.</p>
+      <p>Pulsa en la imagen para abrir la constelación.</p>
       <div class="toolbar">
         <input id="q" type="search" placeholder="Buscar por nombre o etiqueta…">
       </div>
