--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Constelaciones — Galería de entrevistas "A fondo"</title>
   <meta name="description" content="Galería de rostros; cada imagen abre la constelación correspondiente.">
-  <style>
+  <!-- Favicon básico -->
+  <link rel="icon" href="img/favicon.ico" sizes="any"> <!-- ico clásico -->
+  <link rel="icon" type="image/svg+xml" href="img/favicon.svg"> <!-- versión SVG escalable -->
+  <!-- PNG en varios tamaños -->
+  <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="img/favicon-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="img/favicon-512.png">
+  <!-- Para iOS/Apple -->
+  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+    <style>
     /* === Tema oscuro alineado con las constelaciones === */
     :root{
       --bg:#0b0f14;               /* fondo general */
