--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <body>
   <header>
     <div class="wrap">
-      <h1>Galería de entrevistas</h1>
+      <h1>Galería de Constelaciones "A Fondo"</h1>
       <p>Pulsa en la imagen para abrir la constelación.</p>
       <div class="toolbar">
         <input id="q" type="search" placeholder="Buscar por nombre o etiqueta…" aria-label="Buscar en la galería">
@@ -95,7 +95,7 @@
     </div>
   </main>
   <footer>
-    <div class="wrap">A fondo — constelaciones interactivas</div>
+    <div class="wrap">A fondo — Constelaciones interactivas - Desarrollado por Sebastián Miras y José Rovira-Collado</div>
   </footer>
 
   <script>
