--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <header>
     <div class="wrap">
       <h1>Galería de Constelaciones "A Fondo"</h1>
-      <p>Pulsa en la imagen para abrir la constelación.</p>
+      <p>Pulsa en la imagen para abrir la constelación</p>
       <div class="toolbar">
         <input id="q" type="search" placeholder="Buscar por nombre o etiqueta…" aria-label="Buscar en la galería">
       </div>
