--- a/global/global_constelacion.html
+++ b/global/global_constelacion.html
@@ -1,305 +1,247 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Constelación Global — A fondo</title>
+<meta charset="UTF-8">
+<title>Constelación global</title>
+<script src="https://d3js.org/d3.v7.min.js"></script>
 <style>
-  :root{
-    --bg:#0b0f14;
-    --panel:#111821;
-    --panel2:#0e1520;
-    --text:#e6edf3;
-    --green:#2e7d32;   /* Pensamiento y conocimiento (verde en tus prefs) */
-    --purple:#6a1b9a;  /* Contexto socio-histórico (morado) */
-    --red:#c62828;     /* Personales y biográficas (rojo) */
-    --orange:#ef6c00;  /* Culturales y artísticas (naranja) */
-    --muted:#6b7280;
+  body {
+    margin: 0;
+    font-family: system-ui, sans-serif;
+    background-color: #0b0f14;
+    color: #e6edf3;
+    overflow: hidden;
   }
-  html,body{height:100%; margin:0; background:var(--bg); color:var(--text); font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";}
-  .wrap{display:grid; grid-template-columns: 1fr 360px; grid-template-rows: auto 1fr auto; height:100vh;}
-  header{grid-column:1 / -1; padding:12px 16px; background:linear-gradient(180deg,var(--panel),transparent); display:flex; gap:16px; align-items:center; flex-wrap:wrap}
-  h1{font-size:18px; margin:0; font-weight:600;}
-  .search{display:flex; align-items:center; gap:8px; background:var(--panel2); padding:6px 10px; border-radius:10px; width:360px; max-width:90vw;}
-  .search input{flex:1; background:transparent; border:0; outline:0; color:var(--text); font-size:14px;}
-  .legend{display:flex; gap:10px; align-items:center; flex-wrap:wrap; margin-left:auto;}
-  .lg-item{display:flex; align-items:center; gap:6px; font-size:13px; color:#cbd5e1}
-  .dot{width:10px; height:10px; border-radius:50%;}
-  .lg-orange{background:var(--orange)}
-  .lg-purple{background:var(--purple)}
-  .lg-red{background:var(--red)}
-  .lg-green{background:var(--green)}
-  .lg-author{background:transparent; border:2px solid #cbd5e1; border-radius:50%; width:10px; height:10px;}
-  .lg-cat{background:transparent; border:2px dashed #cbd5e1; border-radius:50%; width:10px; height:10px;}
-
-  .stage{position:relative; background:radial-gradient(1200px 800px at 30% 10%, #0e1520 0%, var(--bg) 60%);}
-  #graph{width:100%; height:100%;}
-  aside{background:var(--panel); padding:14px; border-left:1px solid #1f2937; overflow:auto}
-  aside h2{font-size:16px; margin:0 0 6px}
-  aside .meta{font-size:12px; color:#a3a3a3; margin-bottom:8px}
-  aside pre{white-space:pre-wrap; font-family:inherit; font-size:14px; line-height:1.35; background:var(--panel2); padding:10px; border-radius:10px; border:1px solid #1f2937}
-
-  footer{grid-column:1 / -1; font-size:12px; color:#a3a3a3; background:var(--panel2); padding:8px 12px; display:flex; justify-content:space-between; align-items:center;}
-  footer a{color:#9ecbff; text-decoration:none;}
-  .hint{opacity:.8}
-
-  /* nodos y enlaces */
-  .link{stroke:#6b7280; stroke-opacity:.4}
-  .link.mentions{stroke:#9aa4b2; stroke-opacity:.35}
-  .link.belongs{stroke:#7480a8; stroke-opacity:.5; stroke-dasharray:3 2}
-  .node{cursor:grab}
-  .node:active{cursor:grabbing}
-  .node circle{stroke:#0b0f14; stroke-width:1.5px}
-  .node.author circle{fill:#0c1117; stroke:#cbd5e1; stroke-width:2.5px}
-  .node.category circle{fill:transparent; stroke:#cbd5e1; stroke-dasharray:4 3; stroke-width:2}
-  .node text{font-size:12px; fill:#cbd5e1; paint-order:stroke; stroke:rgba(11,15,20,0.8); stroke-width:3px; stroke-linejoin:round}
-  .faded{opacity:.12}
-  .highlight{filter: drop-shadow(0 0 3px rgba(255,255,255,.5))}
+  #graph {
+    position: absolute;
+    top: 0; left: 0; right: 300px; bottom: 0;
+  }
+  #sidebar {
+    position: absolute;
+    top: 0; right: 0; bottom: 0;
+    width: 300px;
+    background: #111821;
+    border-left: 1px solid #222;
+    padding: 10px;
+    overflow-y: auto;
+  }
+  #searchBox {
+    position: absolute;
+    top: 10px; left: 10px;
+    width: 250px;
+    padding: 5px;
+    border: none;
+    border-radius: 4px;
+  }
+  .node circle {
+    stroke: #111;
+    stroke-width: 1.2px;
+  }
+  .node text {
+    font-size: 11px;
+    pointer-events: none;
+  }
+  .link {
+    stroke: #94a3b8;
+    stroke-opacity: .45;
+    pointer-events: none;
+  }
+  .link.mentions {
+    stroke: #9aa4b2;
+    stroke-opacity: .55;
+  }
+  .link.belongs {
+    stroke: #8ea2d8;
+    stroke-opacity: .65;
+    stroke-dasharray: 3 2;
+  }
+  .legend {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    font-size: 13px;
+    background: #0e1520;
+    padding: 6px 10px;
+    border-radius: 8px;
+  }
+  .legend div {
+    margin: 3px 0;
+  }
+  .legend span {
+    display: inline-block;
+    width: 14px; height: 14px;
+    margin-right: 6px;
+    vertical-align: middle;
+    border-radius: 50%;
+  }
+  .bar {
+    position: absolute;
+    bottom: 0; left: 0; right: 300px;
+    background: #0e1520;
+    font-size: 12px;
+    text-align: center;
+    padding: 3px;
+  }
+  .bar a { color: #9fb3ff; text-decoration: none; }
 </style>
 </head>
 <body>
-<div class="wrap">
-  <header>
-    <h1>Constelación global (referencias compartidas)</h1>
-    <div class="search">
-      🔎
-      <input id="q" type="search" placeholder="Buscar autor o referencia…" />
-    </div>
-    <div class="legend">
-      <div class="lg-item"><span class="dot lg-orange"></span> Culturales y artísticas</div>
-      <div class="lg-item"><span class="dot lg-purple"></span> Contexto socio-histórico</div>
-      <div class="lg-item"><span class="dot lg-red"></span> Personales y biográficas</div>
-      <div class="lg-item"><span class="dot lg-green"></span> Pensamiento y conocimiento</div>
-      <div class="lg-item"><span class="lg-author"></span> Entrevistado</div>
-      <div class="lg-item"><span class="lg-cat"></span> Categoría</div>
-    </div>
-  </header>
 
-  <div class="stage">
-    <svg id="graph"></svg>
-  </div>
+<input id="searchBox" type="text" placeholder="Buscar…">
 
-  <aside id="panel">
-    <h2>Selecciona un nodo</h2>
-    <div class="meta">Haz clic en una referencia para ver el contexto.</div>
-    <pre id="ctx">—</pre>
-  </aside>
-
-  <footer>
-    <div class="hint">Arrastra para mover nodos · Rueda/gesto para zoom · Doble clic en fondo para reajustar vista</div>
-    <a href="https://www.youtube.com" target="_blank" rel="noopener">Ver entrevista en YouTube ↗</a>
-  </footer>
+<div id="graph"></div>
+<div id="sidebar"><h3>Contexto</h3><div id="contexto"></div></div>
+<div class="legend">
+  <div><span style="background:#2e7d32"></span>Pensamiento y conocimiento</div>
+  <div><span style="background:#6a1b9a"></span>Contexto socio-histórico</div>
+  <div><span style="background:#c62828"></span>Personales y biográficas</div>
+  <div><span style="background:#ef6c00"></span>Culturales y artísticas</div>
+  <hr>
+  <div>→ autor <em>menciona</em> referencia</div>
+  <div>→ referencia <em>pertenece a</em> categoría</div>
 </div>
+<div class="bar"><a href="https://www.youtube.com/" target="_blank">Ver entrevistas en YouTube</a></div>
 
-<!-- D3 v7 -->
-<script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
 <script>
-(async function(){
-  // Carga CSV (mismo directorio)
-  const nodes = await d3.csv("global_nodos.csv", d3.autoType);
-  const edges = await d3.csv("global_aristas.csv", d3.autoType);
+const width = window.innerWidth - 300, height = window.innerHeight;
 
-  // Mapeo de colores por categoría (según tus preferencias guardadas)
-  const colorByGroup = {
-    "Culturales y artísticas":  "#ef6c00",
-    "Contexto socio-histórico":"#6a1b9a",
-    "Personales y biográficas":"#c62828",
-    "Pensamiento y conocimiento":"#2e7d32",
-    // fallback
-    "autor":"#cbd5e1"
-  };
+// Colores de grupos
+const colorMap = {
+  "Pensamiento y conocimiento": "#2e7d32",
+  "Contexto socio-histórico": "#6a1b9a",
+  "Personales y biográficas": "#c62828",
+  "Culturales y artísticas": "#ef6c00",
+  "autor": "#e6edf3"
+};
 
-  // Tipos y radios
-  const radius = d => {
-    if (d.type === "categoria") return 16;
-    if (d.type === "autor")     return 12;    // autores visibles y consistentes
-    return 8; // referencia
-  };
+// SVG principal
+const svg = d3.select("#graph").append("svg")
+  .attr("width", width)
+  .attr("height", height);
 
-  // SVG base
-  const svg = d3.select("#graph");
-  const width = svg.node().clientWidth || window.innerWidth-360;
-  const height = svg.node().clientHeight || (window.innerHeight-100);
+const linkG = svg.append("g").attr("class","links");
+const nodeG = svg.append("g").attr("class","nodes");
 
-  svg.attr("viewBox", [0,0,width,height]);
-
-  // Def flechas
-  const defs = svg.append("defs");
-  defs.append("marker")
-    .attr("id","arrow")
-    .attr("viewBox","0 -5 10 10")
-    .attr("refX",10).attr("refY",0)
-    .attr("markerWidth",6).attr("markerHeight",6)
-    .attr("orient","auto")
-    .append("path")
+// Definir flechas
+const defs = svg.append("defs");
+function makeArrow(id, color){
+  const m = defs.append("marker")
+    .attr("id", id)
+    .attr("viewBox", "0 -5 10 10")
+    .attr("refX", 12)
+    .attr("refY", 0)
+    .attr("markerWidth", 7)
+    .attr("markerHeight", 7)
+    .attr("orient", "auto");
+  m.append("path")
     .attr("d","M0,-5L10,0L0,5")
-    .attr("fill","#95a3b9").attr("opacity",.8);
+    .attr("fill", color)
+    .attr("opacity", .95);
+}
+makeArrow("arrow-mentions", "#b8c0cc");
+makeArrow("arrow-belongs", "#9fb3ff");
 
-  // Zoom/pan
-  const g = svg.append("g");
-  const linkG = g.append("g").attr("stroke-linecap","round");
-  const nodeG = g.append("g");
-
-  const zoom = d3.zoom().scaleExtent([0.2, 4]).on("zoom", (e)=> g.attr("transform", e.transform));
-  svg.call(zoom);
-
-  // Links
-  const link = linkG.selectAll("line")
-    .data(edges)
-    .enter()
-    .append("line")
-    .attr("class", d => "link " + (d.relation === "belongs_to" ? "belongs" : "mentions"))
-    .attr("stroke-width", d => d.relation === "belongs_to" ? 1.6 : 1.2)
-    .attr("marker-end", "url(#arrow)");
-
-  // Nodes
-  const node = nodeG.selectAll("g.node")
-    .data(nodes, d=>d.id)
-    .enter()
-    .append("g")
-    .attr("class", d => "node " + (d.type === "autor" ? "author" : d.type === "categoria" ? "category" : "reference"))
-    .call(drag());
-
-  node.append("circle")
-      .attr("r", radius)
-      .attr("fill", d => (d.type === "referencia" ? colorByGroup[d.group] || "#9aa4b2"
-                          : d.type === "categoria" ? "transparent"
-                          : "#0c1117"));
-
-  node.append("text")
-      .attr("dy", d => d.type === "categoria" ? -18 : -12)
-      .attr("text-anchor","middle")
-      .text(d => d.label);
-
-  // Panel de contexto
-  const panelTitle = d3.select("#panel h2");
-  const panelMeta  = d3.select("#panel .meta");
-  const panelPre   = d3.select("#ctx");
-
-  node.on("click", (e,d)=>{
-    panelTitle.text(d.label);
-    if(d.type === "referencia"){
-      panelMeta.text(d.group);
-      panelPre.text(d.note && d.note.trim() ? d.note : "—");
-    }else if(d.type === "autor"){
-      panelMeta.text("Entrevistado");
-      panelPre.text("Nodos conectados: referencias que menciona en al menos una coincidencia compartida.");
-    }else{
-      panelMeta.text("Categoría");
-      panelPre.text("Conecta referencias clasificadas bajo esta categoría.");
-    }
-    // pequeña realce visual
-    node.classed("highlight", n => n.id === d.id);
+// Cargar datos
+Promise.all([
+  d3.csv("global_nodos.csv"),
+  d3.csv("global_aristas.csv")
+]).then(([nodes, edges])=>{
+  const nodeById = new Map(nodes.map(d => [d.id, d]));
+  edges.forEach(d => {
+    d.source = nodeById.get(d.source);
+    d.target = nodeById.get(d.target);
   });
 
-  // Fuerzas
-  const id2node = new Map(nodes.map(d=>[d.id,d]));
-  const links = edges.map(d=>Object.assign({}, d, {source:id2node.get(d.source), target:id2node.get(d.target)}));
-
+  // Simulación
   const sim = d3.forceSimulation(nodes)
-    .force("link", d3.forceLink(links).id(d=>d.id).distance(l => l.relation==="belongs_to" ? 110 : 80).strength(l => l.relation==="belongs_to" ? 0.6 : 0.3))
-    .force("charge", d3.forceManyBody().strength(d => d.type==="categoria" ? -3000 : d.type==="autor" ? -500 : -250))
-    .force("collide", d3.forceCollide().radius(d=>radius(d)+6))
-    .force("center", d3.forceCenter(width*0.5, height*0.52))
-    .force("catPull", categoryAttractor());
+    .force("link", d3.forceLink(edges).id(d=>d.id).distance(80).strength(0.7))
+    .force("charge", d3.forceManyBody().strength(-220))
+    .force("center", d3.forceCenter(width/2, height/2))
+    .force("collision", d3.forceCollide().radius(d=>radius(d)+4));
 
+  // Enlaces
+  const link = linkG.selectAll("line")
+    .data(edges)
+    .enter().append("line")
+    .attr("class", d => "link " + (d.relation==="belongs_to" ? "belongs" : "mentions"))
+    .attr("stroke-width", d => d.relation==="belongs_to"?1.8:1.4)
+    .attr("marker-end", d => d.relation==="belongs_to" ? "url(#arrow-belongs)" : "url(#arrow-mentions)");
+
+  // Nodos
+  const node = nodeG.selectAll("g")
+    .data(nodes)
+    .enter().append("g")
+    .attr("class","node")
+    .call(d3.drag()
+      .on("start",dragstarted)
+      .on("drag",dragged)
+      .on("end",dragended));
+
+  node.append("circle")
+    .attr("r", radius)
+    .attr("fill", d => color(d));
+
+  node.append("text")
+    .text(d=>d.label)
+    .attr("dy",3)
+    .attr("x", d=>radius(d)+4)
+    .style("font-size","10px");
+
+  // Click -> mostrar contexto
+  node.on("click", (e,d)=>{
+    document.getElementById("contexto").innerText = d.note || "(sin contexto)";
+  });
+
+  // Simulación tick con recorte de líneas
   sim.on("tick", ()=>{
-    link.attr("x1", d=>d.source.x).attr("y1", d=>d.source.y)
-        .attr("x2", d=>d.target.x).attr("y2", d=>d.target.y);
+    link.each(function(d){
+      const sx = d.source.x, sy = d.source.y, tx = d.target.x, ty = d.target.y;
+      const dx = tx - sx, dy = ty - sy;
+      const dist = Math.hypot(dx, dy) || 1;
+      const nx = dx/dist, ny = dy/dist;
+
+      const rSource = radius(d.source);
+      const rTarget = radius(d.target);
+
+      const x1 = sx + nx*(rSource+1);
+      const y1 = sy + ny*(rSource+1);
+      const x2 = tx - nx*(rTarget+3);
+      const y2 = ty - ny*(rTarget+3);
+
+      d3.select(this).attr("x1",x1).attr("y1",y1).attr("x2",x2).attr("y2",y2);
+    });
+
     node.attr("transform", d=>`translate(${d.x},${d.y})`);
   });
 
-  // Atrae referencias hacia su categoría (anclas suaves en esquinas)
-  function categoryAttractor(){
-    // esquinas/zonas para 4 categorías
-    const anchors = {
-      "Culturales y artísticas":    {x: width*0.72, y: height*0.30},
-      "Contexto socio-histórico":   {x: width*0.28, y: height*0.30},
-      "Personales y biográficas":   {x: width*0.28, y: height*0.74},
-      "Pensamiento y conocimiento": {x: width*0.72, y: height*0.74},
-    };
-    // posiciona nodos categoría cerca de sus anclas
-    nodes.forEach(n=>{
-      if(n.type==="categoria"){
-        const a = anchors[n.label] || {x:width/2,y:height/2};
-        n.fx = a.x; n.fy = a.y;
-      }
-    });
-    return (alpha)=>{
-      nodes.forEach(n=>{
-        if(n.type==="referencia"){
-          const a = anchors[n.group];
-          if(a){
-            n.vx += (a.x - n.x) * 0.0008 * alpha;
-            n.vy += (a.y - n.y) * 0.0008 * alpha;
-          }
-        }
-      });
-    };
-  }
-
-  // Búsqueda: atenúa no-coincidentes y centra primer match
-  const input = document.getElementById("q");
-  input.addEventListener("input", ()=>{
-    const q = input.value.trim().toLowerCase();
-    let firstMatch = null;
-    node.classed("faded", d=>{
-      const hit = !q || d.label.toLowerCase().includes(q);
-      if(hit && !firstMatch) firstMatch = d;
-      return q && !hit;
-    });
-    link.classed("faded", l=>{
-      if(!q) return false;
-      const hs = l.source.label.toLowerCase().includes(q);
-      const ht = l.target.label.toLowerCase().includes(q);
-      return !(hs || ht);
-    });
-    if(firstMatch){
-      centerOn(firstMatch.x, firstMatch.y, 1.2);
-    }
+  // Buscar
+  document.getElementById("searchBox").addEventListener("input", function(){
+    const term = this.value.toLowerCase();
+    node.style("opacity", d => d.label.toLowerCase().includes(term)?1:0.15);
+    link.style("opacity", d => (d.source.label.toLowerCase().includes(term) || d.target.label.toLowerCase().includes(term)) ? 0.9 : 0.05);
   });
+});
 
-  // Doble clic para reajustar vista
-  svg.on("dblclick", ()=>{
-    fitToContent();
-  });
-
-  // Ajuste inicial al componente principal (autor→categorías→referencias)
-  setTimeout(fitToContent, 800);
-
-  function fitToContent(padding=60){
-    const content = g.node().getBBox();
-    const scale = Math.max(0.2, Math.min(2.5,
-      0.9 / Math.max(content.width / (width - padding*2), content.height / (height - padding*2))
-    ));
-    const tx = (width - scale*(content.x*2 + content.width))/2;
-    const ty = (height - scale*(content.y*2 + content.height))/2;
-    svg.transition().duration(650).call(zoom.transform, d3.zoomIdentity.translate(tx,ty).scale(scale));
-  }
-
-  function centerOn(x,y, scale=1.4){
-    svg.transition().duration(450).call(
-      zoom.transform,
-      d3.zoomIdentity.translate(width/2, height/2).scale(scale).translate(-x, -y)
-    );
-  }
-
-  function drag(){
-    function dragstarted(event,d){
-      if(!event.active) sim.alphaTarget(0.3).restart();
-      d.fx = d.x; d.fy = d.y;
-    }
-    function dragged(event,d){
-      d.fx = event.x; d.fy = event.y;
-    }
-    function dragended(event,d){
-      if(!event.active) sim.alphaTarget(0);
-      // liberamos solo referencias y autores; categorías quedan fijas
-      if(d.type !== "categoria"){ d.fx = null; d.fy = null; }
-    }
-    return d3.drag().on("start",dragstarted).on("drag",dragged).on("end",dragended);
-  }
-})();
+// Funciones auxiliares
+function radius(d){
+  if(d.type==="categoria") return 16;
+  if(d.type==="autor") return 12;
+  return 8;
+}
+function color(d){
+  if(d.type==="categoria") return colorMap[d.label] || "#888";
+  if(d.type==="autor") return colorMap["autor"];
+  return colorMap[d.group] || "#ccc";
+}
+function dragstarted(e,d){
+  if(!e.active) d.fy = d.y, d.fx = d.x;
+}
+function dragged(e,d){
+  d.fx = e.x; d.fy = e.y;
+}
+function dragended(e,d){
+  if(!e.active){ d.fx=null; d.fy=null; }
+}
 </script>
 </body>
 </html>
